# video-streamer

./: .gitignore  Cargo.toml  architecture.archimate
common/: Cargo.toml
common/src/: config.rs  lib.rs
common/src/dto/: video.rs
video-encoder/: Cargo.toml  run.sh
video-encoder/src/: api.rs  errors.rs  main.rs  video.rs
video-encoder/src/dto/: video.rs
video-server/: Cargo.toml  run.sh
video-server/src/: api.rs  config.rs  errors.rs  main.rs  video.rs
video-server/src/dto/: video.rs  video_list.rs
web-client/: Cargo.toml  index.html  serve.sh
web-client/src/: app.rs  config.rs  main.rs  routes.rs
