[package]
name = "video-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3"
poem-openapi = { version = "3.0", features = ["swagger-ui"]}
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
