[package]
name = "video-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# environment
envconfig = "0.10.0"

# getters and setters
getset = "0.1.2"

# error mapping
thiserror = "1.0"
